--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.10"
 dependencies = [
     "Pillow>=10.0.0",
     "pillow-heif>=0.15.0",
+    "piexif>=1.1.3",
 ]
 
 [project.optional-dependencies]
